# rabbit-search

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .vimspector.json  CMakeLists.txt  CMakePresets.json  Makefile  README.md  benchy.sh  build.zig  build.zig.zon  testy.sh
.vim/: coc-settings.json
build-tools/: bench-mp.sh  test-correctness.sh
c/: intr.c  intr.h  sysops.c  sysops.h
include/: cli.h  filters.h  job_q.h  log.h  pathops.h  pp.h  rs_features.h  string_search.h  sys.h
lab/queue-perf/: CMakeLists.txt
lab/queue-perf/include/: SPSCQueue.hpp
lab/queue-perf/src/: benchmarks.cpp
src/: app.c  broken.h  cli.c  filters.c  heap.zig  job_q.c  main.zig  metrics.zig  mp_search.zig  pathops.c  queue.zig  stack.zig  str.zig  string_search.c  sys.c  sys.zig  threading.zig  trace.zig
src/sync/: queue.zig  spinning_thread_pool.zig  sync.zig
